Remove `SimpleDtoMapper` and DTO classes; adjust `ReplaceMapstructWithImpl` tests for corrected implementation paths.