@@ -25,6 +25,7 @@ import org.openrewrite.test.RewriteTest;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.openrewrite.java.Assertions.java;
 
@@ -40,55 +41,57 @@ class ReplaceMapstructWithImplTest implements RewriteTest {
     @DocumentExample
     @Test
     void replaceSimpleDtoMapper() throws IOException {
+        // Given
         // Create the generated implementation file that MapStruct would generate
         // This simulates the annotation processor output
-        Path projectRoot = Path.of("").toAbsolutePath();
+        Path projectRoot = Paths.get("").toAbsolutePath();
         Path generatedDir = projectRoot.resolve("build/generated/sources/annotationProcessor/java/main/com/santunioni/fixtures/dtoMappers");
         Files.createDirectories(generatedDir);
-        
+
+        // language=java
         String generatedImpl = """
-            package com.santunioni.fixtures.dtoMappers;
-            
-            import javax.annotation.processing.Generated;
-            
-            @Generated(
-                value = "org.mapstruct.ap.MappingProcessor",
-                date = "2025-01-01T00:00:00Z",
-                comments = "version: 1.5.5.Final, compiler: javac, environment: Java 17"
-            )
-            public class SimpleDtoMapperImpl implements SimpleDtoMapper {
-            
-                @Override
-                public SimpleDtoOut toSimpleDtoOut(SimpleDtoIn simpleDtoIn) {
-                    if (simpleDtoIn == null) {
-                        return null;
-                    }
-                    
-                    Long id = simpleDtoIn.getId();
-                    String name = simpleDtoIn.getName();
-                    
-                    return new SimpleDtoOut(id, name);
-                }
-                
-                @Override
-                public SimpleDtoIn toSimpleDtoIn(SimpleDtoOut simpleDtoOut) {
-                    if (simpleDtoOut == null) {
-                        return null;
-                    }
-                    
-                    Long id = simpleDtoOut.getId();
-                    String name = simpleDtoOut.getName();
-                    
-                    return new SimpleDtoIn(id, name);
-                }
-            }
-            """;
-        
+package com.santunioni.fixtures.dtoMappers;
+
+import javax.annotation.processing.Generated;
+
+@Generated(
+    value = "org.mapstruct.ap.MappingProcessor",
+    date = "2025-01-01T00:00:00Z",
+    comments = "version: 1.5.5.Final, compiler: javac, environment: Java 17"
+)
+public class SimpleDtoMapperImpl implements SimpleDtoMapper {
+
+    @Override
+    public SimpleDtoOut toSimpleDtoOut(SimpleDtoIn simpleDtoIn) {
+        if (simpleDtoIn == null) {
+            return null;
+        }
+
+        Long id = simpleDtoIn.getId();
+        String name = simpleDtoIn.getName();
+
+        return new SimpleDtoOut(id, name);
+    }
+
+    @Override
+    public SimpleDtoIn toSimpleDtoIn(SimpleDtoOut simpleDtoOut) {
+        if (simpleDtoOut == null) {
+            return null;
+        }
+
+        Long id = simpleDtoOut.getId();
+        String name = simpleDtoOut.getName();
+
+        return new SimpleDtoIn(id, name);
+    }
+}
+""";
         Files.writeString(generatedDir.resolve("SimpleDtoMapperImpl.java"), generatedImpl);
-        
+
         rewriteRun(
           // Include the DTO classes so types are available
           java(
+            // language=java
             """
               package com.santunioni.fixtures.dtoMappers;
               
@@ -113,6 +116,7 @@ class ReplaceMapstructWithImplTest implements RewriteTest {
             spec -> spec.path("src/main/java/com/santunioni/fixtures/dtoMappers/SimpleDtoIn.java")
           ),
           java(
+            // language=java
             """
               package com.santunioni.fixtures.dtoMappers;
               
@@ -140,6 +144,7 @@ class ReplaceMapstructWithImplTest implements RewriteTest {
           // The recipe should find the generated SimpleDtoMapperImpl in build/generated/sources/annotationProcessor/java/main
           // and replace the interface with the implementation class
           java(
+            // language=java
             """
               package com.santunioni.fixtures.dtoMappers;
               
@@ -151,11 +156,46 @@ class ReplaceMapstructWithImplTest implements RewriteTest {
                   SimpleDtoIn toSimpleDtoIn(SimpleDtoOut simpleDtoOut);
               }
               """,
-            // After transformation:
-            // - Should be a class, not an interface
-            // - Should have @Generated annotation instead of @Mapper
-            // - Should not have @Override annotations
-            // - Should have the implementation methods
+            // language=java
+            """
+              package com.santunioni.fixtures.dtoMappers;
+              
+              import javax.annotation.processing.Generated;
+              
+              import org.mapstruct.Mapper;
+              
+              @Generated(
+                  value = "org.mapstruct.ap.MappingProcessor",
+                  date = "2025-01-01T00:00:00Z",
+                  comments = "version: 1.5.5.Final, compiler: javac, environment: Java 17"
+              )
+              public class SimpleDtoMapper {
+
+                  
+                  public SimpleDtoOut toSimpleDtoOut(SimpleDtoIn simpleDtoIn) {
+                      if (simpleDtoIn == null) {
+                          return null;
+                      }
+              
+                      Long id = simpleDtoIn.getId();
+                      String name = simpleDtoIn.getName();
+              
+                      return new SimpleDtoOut(id, name);
+                  }
+
+                  
+                  public SimpleDtoIn toSimpleDtoIn(SimpleDtoOut simpleDtoOut) {
+                      if (simpleDtoOut == null) {
+                          return null;
+                      }
+              
+                      Long id = simpleDtoOut.getId();
+                      String name = simpleDtoOut.getName();
+              
+                      return new SimpleDtoIn(id, name);
+                  }
+              }
+              """,
             spec -> spec.path("src/main/java/com/santunioni/fixtures/dtoMappers/SimpleDtoMapper.java")
           )
         );
